[tool.poetry]
name = "leetcode_python.ws"
version = "0.1.0"
description = "Solve leetcode problems with python"
authors = ["Gustavo Basso <gubasso@eambar.net>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
